--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
       rel="stylesheet"
     />
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <h1>Hallo</h1>
+    <main class="home"></main>
   </body>
 </html>
