--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,8 +18,8 @@
     />
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body>
+  <body id="home">
     <include src="./partials/header.html"></include>
-    <main class="home"></main>
+    <main class="homepage"></main>
   </body>
 </html>
