add homepage content with mobile styling

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,22 @@
   </head>
   <body id="home">
     <include src="./partials/header.html"></include>
-    <main class="homepage"></main>
+    <main class="homepage">
+      <div class="homepage__content">
+        <div class="homepage__textContainer">
+          <h1 class="homepage__title">
+            So, you want to travel to
+            <span class="homepage__title--large">Space</span>
+          </h1>
+          <p class="homepage__text">
+            Let's face it; if you want to go to space, you might as well
+            genuinely go to outer space and not hover kind of on the edge of it.
+            Well sit back, and relax because we'll give you a truly out of this
+            world experience!
+          </p>
+        </div>
+        <button class="homepage__btn">Explore</button>
+      </div>
+    </main>
   </body>
 </html>
