add title and nav to destination page

--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -20,6 +20,16 @@
   </head>
   <body id="destination">
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main class="destpage">
+      <div class="destpage__content">
+        <h1 class="destpage__title"><span>01</span>Pick your destination</h1>
+        <div class="destpage__btnContainer">
+          <button class="destpage__btn">Moon</button>
+          <button class="destpage__btn">Mars</button>
+          <button class="destpage__btn">Europe</button>
+          <button class="destpage__btn">Titan</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
