add destination page desktop styling

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,8 @@
     />
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body id="home">
+  <body>
+    <div class="home-bg"></div>
     <include src="./partials/header.html"></include>
     <main class="homepage">
       <div class="homepage__content">
