add crewpage setup

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -19,7 +19,12 @@
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body id="crew">
+    <div class="crewpage__bg"></div>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main class="crewpage">
+      <div class="crewpage__content">
+        <h1 class="crewpage__title"><span>02</span>Meet your crew</h1>
+      </div>
+    </main>
   </body>
 </html>
