add technology page setup

--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -19,7 +19,12 @@
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body id="technology">
+    <div class="tecpage__bg"></div>
     <include src="./partials/header.html"></include>
-    <main></main>
+    <main class="tecpage">
+      <div class="tecpage__content">
+        <h1 class="tecpage__title"><span>03</span>Space launch 101</h1>
+      </div>
+    </main>
   </body>
 </html>
