change css classname

--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -19,7 +19,7 @@
     <title>Frontend Mentor | Space tourism website</title>
   </head>
   <body>
-    <div class="destination-bg"></div>
+    <div class="destpage__bg"></div>
     <include src="./partials/header.html"></include>
     <main class="destpage">
       <div class="destpage__content">
