--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -24,6 +24,103 @@
     <main class="crewpage">
       <div class="crewpage__content">
         <h1 class="crewpage__title"><span>02</span>Meet your crew</h1>
+        <div class="crewpage__container">
+          <div class="crewpage__imgContainer">
+            <picture>
+              <source
+                type="image/png"
+                srcset="../images/crew/image-douglas-hurley.png"
+              />
+              <source
+                type="image/webp"
+                srcset="../images/crew/image-douglas-hurley.webp"
+              />
+              <img
+                src="../images/crew/image-douglas-hurley.webp"
+                alt="Douglas Hurley"
+                data-crewid="0"
+                class="crewpage__img crewpage__img--show"
+              />
+            </picture>
+            <picture>
+              <source
+                type="image/png"
+                srcset="../images/crew/image-mark-shuttleworth.png"
+              />
+              <source
+                type="image/webp"
+                srcset="../images/crew/image-mark-shuttleworth.webp"
+              />
+              <img
+                src="../images/crew/image-mark-shuttleworth.webp"
+                alt="Mark Shuttleworth"
+                data-crewid="1"
+                class="crewpage__img"
+              />
+            </picture>
+            <picture>
+              <source
+                type="image/png"
+                srcset="../images/crew/image-victor-glover.png"
+              />
+              <source
+                type="image/webp"
+                srcset="../images/crew/image-victor-glover.webp"
+              />
+              <img
+                src="../images/crew/image-victor-glover.webp"
+                alt="Victor Glover"
+                data-crewid="2"
+                class="crewpage__img"
+              />
+            </picture>
+            <picture>
+              <source
+                type="image/png"
+                srcset="../images/crew/image-anousheh-ansari.png"
+              />
+              <source
+                type="image/webp"
+                srcset="../images/crew/image-anousheh-ansari.webp"
+              />
+              <img
+                src="../images/crew/image-anousheh-ansari.webp"
+                alt="Anousheh Ansari"
+                data-crewid="3"
+                class="crewpage__img"
+              />
+            </picture>
+          </div>
+          <div class="crewpage__textContainer">
+            <div class="crewpage__nav">
+              <button
+                class="crewpage__btn crewpage__btn--active"
+                aria-label="Choose crew member"
+              ></button>
+              <button
+                class="crewpage__btn"
+                aria-label="Choose crew member"
+              ></button>
+              <button
+                class="crewpage__btn"
+                aria-label="Choose crew member"
+              ></button>
+              <button
+                class="crewpage__btn"
+                aria-label="Choose crew member"
+              ></button>
+            </div>
+            <div class="crewpage__text">
+              <h3 class="crewpage__h3">Commander</h3>
+              <h2 class="crewpage__h2">Douglas Hurley</h2>
+              <p class="crewpage__p">
+                Douglas Gerald Hurley is an American engineer, former Marine
+                Corps pilot and former NASA astronaut. He launched into space
+                for the third time as commander of Crew Dragon Demo-2.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
