add functionality and desktop styling

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -94,20 +94,28 @@
           <div class="crewpage__textContainer">
             <div class="crewpage__nav">
               <button
-                class="crewpage__btn crewpage__btn--active"
+                class="crewpage__btn"
                 aria-label="Choose crew member"
+                data-active="true"
+                data-btnid="0"
               ></button>
               <button
                 class="crewpage__btn"
                 aria-label="Choose crew member"
+                data-active="false"
+                data-btnid="1"
               ></button>
               <button
                 class="crewpage__btn"
                 aria-label="Choose crew member"
+                data-active="false"
+                data-btnid="2"
               ></button>
               <button
                 class="crewpage__btn"
                 aria-label="Choose crew member"
+                data-active="false"
+                data-btnid="3"
               ></button>
             </div>
             <div class="crewpage__text">
