add mobile and tablet styling

--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -25,6 +25,61 @@
       <div class="tecpage__content">
         <h1 class="tecpage__title"><span>03</span>Space launch 101</h1>
       </div>
+      <div class="tecpage__container">
+        <div class="tecpage__imgContainer">
+          <picture>
+            <source
+              media="(min-width:1440px)"
+              srcset="../images/technology/image-launch-vehicle-portrait.jpg"
+            />
+            <img
+              src="../images/technology/image-launch-vehicle-landscape.jpg"
+              alt="Launch Vehicle"
+              class="tecpage__img tecpage__img--show"
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width:1440px)"
+              srcset="../images/technology/image-spaceport-portrait.jpg"
+            />
+            <img
+              src="../images/technology/image-spaceport-landscape.jpg"
+              alt="Spaceport"
+              class="tecpage__img"
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width:1440px)"
+              srcset="../images/technology/image-space-capsule-portrait.jpg"
+            />
+            <img
+              src="../images/technology/image-space-capsule-landscape.jpg"
+              alt="Space Capsule"
+              class="tecpage__img"
+            />
+          </picture>
+        </div>
+        <div class="tecpage__content">
+          <div class="tecpage__nav">
+            <button class="tecpage__btn" data-active="true">1</button>
+            <button class="tecpage__btn" data-active="false">2</button>
+            <button class="tecpage__btn" data-active="false">3</button>
+          </div>
+          <div class="tecpage__textContainer">
+            <h3 class="tecpage__h3">The Terminology ...</h3>
+            <h2 class="tecpage__h2">Launch Vehicle</h2>
+            <p class="tecpage__p">
+              A launch vehicle or carrier rocket is a rocket-propelled vehicle
+              used to carry a payload from Earth's surface to space, usually to
+              Earth orbit or beyond. Our WEB-X carrier rocket is the most
+              powerful in operation. Standing 150 metres tall, it's quite an
+              awe-inspiring sight on the launch pad!
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
