add desktop styling

--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -61,7 +61,7 @@
             />
           </picture>
         </div>
-        <div class="tecpage__content">
+        <div class="tecpage__content tecpage__flex">
           <div class="tecpage__nav">
             <button class="tecpage__btn" data-active="true">1</button>
             <button class="tecpage__btn" data-active="false">2</button>
