fix destination page and change nav active

--- a/src/html/destination.html
+++ b/src/html/destination.html
@@ -18,7 +18,7 @@
     />
     <title>Frontend Mentor | Space tourism website</title>
   </head>
-  <body>
+  <body id="destination">
     <div class="destpage__bg"></div>
     <include src="./partials/header.html"></include>
     <main class="destpage">
