add hover state and transitions

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,7 +35,9 @@
             world experience!
           </p>
         </div>
-        <button class="homepage__btn">Explore</button>
+        <a href="./destination.html"
+          ><button class="homepage__btn">Explore</button></a
+        >
       </div>
     </main>
   </body>
