add animation on crewpage

--- a/src/html/crew.html
+++ b/src/html/crew.html
@@ -118,7 +118,7 @@
                 data-btnid="3"
               ></button>
             </div>
-            <div class="crewpage__text">
+            <div class="crewpage__text crewpage__text--fadein">
               <h3 class="crewpage__h3">Commander</h3>
               <h2 class="crewpage__h2">Douglas Hurley</h2>
               <p class="crewpage__p">
