add animation on tecpage

--- a/src/html/technology.html
+++ b/src/html/technology.html
@@ -79,7 +79,7 @@
               3
             </button>
           </div>
-          <div class="tecpage__textContainer">
+          <div class="tecpage__textContainer tecpage__textContainer--fadein">
             <h3 class="tecpage__h3">The Terminology ...</h3>
             <h2 class="tecpage__h2">Launch Vehicle</h2>
             <p class="tecpage__p">
